testing/Travis/testcases/prototype/shouldFail/phone.adl
CONTEXT TypExample IN DUTCH

reachableBy :: Person * PhoneNumber
carrier :: CellPhone * Person
number :: Phone * PhoneNumber
carrier :: PhoneNumber * NetworkProvider
RULE carrier~ ; number |- reachableBy
CLASSIFY CellPhone ISA Phone


{- Het spreekt voor zich dat de regel niet goed is getypeerd. Echter, ampersand versie 1072 klaagt hier niet over.... -}

ENDCONTEXT 